--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-flask
-pandas
-numpy
-matplotlib
-seaborn
+Flask==3.1.1
+pandas==2.3.0
+matplotlib==3.10.3
+seaborn==0.13.2
+requests==2.31.0
+beautifulsoup4==4.12.3
